...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59Z-7r-ZCI">
                                <rect key="frame" x="16" y="308" width="343" height="44"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="N7m-wD-zb6"/>
                                </constraints>
                                <state key="normal" title="Perform Request">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="performRequestWithSender:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hNC-JR-dVl"/>
                                </connections>
                            </button>
...
                                            <segue destination="vXZ-lx-hvc" kind="show" id="HhA-cD-3rK"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ThH-Gb-WhU">
                                        <rect key="frame" x="0.0" y="84.5" width="130" height="34.5"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Test Recorder"/>
                                        <connections>
                                            <segue destination="WT3-AD-kDY" kind="show" id="Ys8-ZV-Rd6"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
